--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 -->
 <html>
 	<head>
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-2604172391310894",
+    enable_page_level_ads: true
+  });
+</script>
 		<title>Ethereal by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
