--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     enable_page_level_ads: true
   });
 </script>
-		<title>Ethereal by HTML5 UP</title>
+		<title>Free iPhone</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
