--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
 									<h1 class="major">Hello, my name<br />
-									is Jack Duke </h1>
-									<p>This is <strong>Ethereal</strong>, a free site template by AJ for <a href="https://html5up.net">HTML5 UP</a>. It’s fully responsive, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you dig it :)</p>
+									is Sarvjeet </h1>
+									<p>This is <strong>Ethereal</strong>, My Naked Webiste <a href="https://html5up.net">HTML5 UP</a>. It’s fully Pornhub Free , built on Ass, and released entirely for Boobs. Hope you dig it :)</p>
 									<ul class="actions">
 										<li><a href="#first" class="button special color1 circle icon fa-angle-right">Next</a></li>
 									</ul>
